# SpokanePythonWeb

./: .dockerignore  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: bandit.yaml  build_and_publish_docker.yaml  fawltydeps.yaml  isort.yaml  mypy.yaml  pip_audit.yaml  pytest.yaml  radon.yaml  release.yaml  ruff_format.yaml  ruff_lint.yaml
src/django_project/: entrypoint.sh
src/django_project/core/: asgi.py  settings.py  views.py  wsgi.py
src/django_project/core/static/spokanepython/css/: spug.css  spug.css.map  spug.scss
src/django_project/core/templates/: base.htm
src/django_project/core/urls/: rest.py  urls.py
src/django_project/tests/unit/web/: test_model_crud.py  test_viewsets.py
src/django_project/web/: admin.py  filtersets.py  forms.py  models.py  serializers.py  sitemaps.py
src/django_project/web/migrations/: 0001_initial.py  0002_event_url.py  0002_resource_enabled.py  0003_rename_target_audience_presentationrequest_skill_level.py
src/django_project/web/scripts/: initialize_data.py
src/django_project/web/templates/web/custom/: index.html
src/django_project/web/templates/web/full/: host_info.html  index.html
src/django_project/web/templates/web/navigation/: report.htm
src/django_project/web/templates/web/partials/: future_events.htm  past_events.htm  presentation_request.htm  resource_list.htm  topic_suggestion.htm  wwd.htm
src/django_project/web/urls/: __init__.py  gui.py  rest.py
src/django_project/web/views/: gui.py  rest.py  viewsets.py
src/docker/: Dockerfile  docker-compose.yaml  local-compose.yaml  traefik-compose.yaml
src/envs/: .env.docker-compose.template  .env.template
