[project]
dependencies = [
    "django~=5.2.12",
    "django-braces",
    "django-debug-toolbar",
    "django-environ",
    "django-extensions",
    "django-filter",
    "django-handyhelpers~=0.3",
    "djangorestframework",
    "djangorestframework-filters==1.0.0.dev0",
    "drf-flex-fields",
    "drf-spectacular",
    "whitenoise",
]
description = "Spokane Python Community"
dynamic = ["version"]
keywords = ["django"]
license = {file = "LICENSE"}
name = "my_django_project"
readme = "README.md"
requires-python = ">=3.12"


[project.optional-dependencies]
dev = [
    "bandit",
    "faker",
    "fawltydeps",    
    "isort",
    "model-bakery",
    "mypy",
    "mypy-extensions",
    "ruff",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "radon",
    "types-python-dateutil",
    "types-requests",
    "typing_extensions",
]
docker = [
    "gunicorn",
    "psycopg2-binary",
]


[tool.bandit]
exclude_dirs = ["venv", "django_project/tests", "django_project/*/management/commands"]


[tool.black]
line-length = 120


[tool.coverage.report]
show_missing = true


[tool.coverage.run]
branch = true
source = ["src/django_project"]
omit = [
    "src/django_project/manage.py", 
    "src/django_project/core/asgi.py",
    "src/django_project/core/wsgi.py", 
    "src/django_project/*/scripts/*",
    "src/django_project/tests/*", 
    ]


[tool.fawltydeps]
code = ["src/django_project"]
deps = ["pyproject.toml"]
ignore_unused = [
    "bandit",
    "black",
    "django-braces",
    "django-celery-beat",
    "django-debug-toolbar",
    "django-extensions",
    "django-filter",
    "gunicorn",
    "faker",
    "fawltydeps",
    "isort",
    "model-bakery",
    "mypy",
    "mypy-extensions",
    "ruff",
    "psycopg2-binary",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "radon",
    "redis",
    "types-python-dateutil",
    "types-requests",
    "typing_extensions",
    "whitenoise"
    ]
output_format = "human_detailed"


[tool.isort]
profile = "black"


[tool.mypy]
exclude = [
    "venv/*", 
    "src/django_project/local_test",
    "src/django_project/.*/migrations/.*",
    "src/django_project/.*/scripts/.*",
    ]
ignore_missing_imports = true


[tool.pytest.ini_options]
addopts = "-s -v -x --strict-markers -m 'not extra'"
testpaths = ["src/django_project"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
    ]


[tool.ruff]
line-length = 120
exclude = [
    "src/django_project/manage.py", 
    "src/django_project/tests", 
    "src/django_project/*/migrations", 
    "src/django_project/*/scripts", 
    "src/django_project/*/local_test"
    ]


[tool.setuptools.packages.find]
where = ["."]
include = ["django_project"]
exclude = []
namespaces = false
